--- a/build.gradle
+++ b/build.gradle
@@ -3,15 +3,18 @@
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url  "https://dl.bintray.com/rohitpuri/HttpCaller"
+        }
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.2'
-        classpath "com.github.dcendents:android-maven-gradle-plugin:1.3"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:2.2.2'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
     }
+
 }
+
 
 allprojects {
     repositories {
