--- a/universalasynchandler/build.gradle
+++ b/universalasynchandler/build.gradle
@@ -32,7 +32,7 @@ ext {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:25.+'
-    compile 'com.github.rohitpuriji:UniversalAsyncHandler:-SNAPSHOT'
+    compile 'com.github.jitpack:gradle-simple:1.0'
 }
 
 
